--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:ital,wght@1,300&family=Open+Sans:ital,wght@0,300;1,300;1,500&family=Poppins:wght@200;300;500&display=swap');
 /* common style */
 body{
-    ont-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', cursive;
 font-family: 'Cormorant Garamond', serif;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
@@ -18,6 +18,7 @@ main{
     width: 870px;
     padding: 30px;
     margin-bottom: 21px;
+    
 }
 .style{
     color: #562EFF;
@@ -84,3 +85,57 @@ top blog section
    text-decoration: none;
    color: #562EFF;
 }
+/*--------------- 
+lates cours
+--------------- */
+.main-course{
+    display: flex;
+    
+}
+.courses-image img{
+    width: 224px;
+height: 104px;
+}
+.space{
+    margin-left: 50px;
+    
+}
+.change{
+  color: #FFC014;
+}
+.empty{
+    color: #AEAEAE;
+}
+.star{
+    display: flex;
+    
+}
+span{
+    margin-left: 10px;
+    color: #A2A2A2;
+}
+.hour{
+    margin-left: 10px;
+   
+    background-color: rgba(241, 164, 177, 0.644);
+    border-radius: 20px;
+    padding-right: 15px;
+    font-size: 14px;
+    color: rgb(250, 9, 50);
+}
+.far.fa-clock{
+    color:rgb(243, 10, 49);
+    padding: 5px;
+}
+.corses{
+    Width: 252.42px;
+    Height: 269.79px;
+    
+    border-radius: 10px;
+    box-shadow: 0px 5.342289924621582px 13.35572338104248px 0px #0000000D;
+}
+.spac{
+    margin-left: 60px;
+}
+
+
