--- a/style.css
+++ b/style.css
@@ -175,6 +175,17 @@ span{
 /*---------------
  only for ipade
  ---------------- */
-@media screen {
-    
+@media only screen and (min-width:689px) and (max-width:992px){
+    .container{
+        width: 100%;  
+    }
+    .players, .blogs, .main-course{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    .corses{
+        margin-top: 40px;
+    }
 }
